# friday_ws

./: README.md  utils.py
3d_model/: LM2596 DC-DC Buck Converter Module.STEP  Limb_Ball_Bearing_Mount_long_v4.SLDPRT  Limb_Ball_Bearing_Mount_long_v4_mirror.SLDPRT  Limb_Bottom_Shell.SLDPRT  Limb_Bottom_Shell_mirror.SLDPRT  Limb_Servohorn_Mount_long_v4.SLDPRT  Limb_Servohorn_Mount_long_v4_mirror.SLDPRT  Limb_Top_Shell_with_BB_hole.SLDPRT  Pan Head Cross Screw M1.6.SLDPRT  Servo Horns.SLDPRT  Servo MG996R.SLDPRT  V1.02_Front_Outer_Shoulder.SLDPRT  body_cover _front.SLDPRT  body_cover _top.SLDPRT  body_cover_bottom.SLDPRT  body_cover_rear.SLDPRT  l_b_4.SLDPRT  main_body.SLDPRT  mg996_arm_6pad.SLDPRT  r_b_4.SLDPRT
3d_model/STL_files/: Cameramount.stl  Front_Cover_Optimized.stl  Limb_Ball_Bearing_Mount_long_v4.stl  Limb_Servohorn_Mount_long_v4.stl  Part1.STL  ShoulderJointInner.stl  ShoulderJointOuter.stl
3d_model/raspberry-pi-4-model-b/: Raspberry Pi 4 Model B.SLDASM
RL/: urdf_to_mjcf.py
RL/envs/: friday_env.py
friday_config/: CMakeLists.txt  README.md
friday_description/: friday.xml  friday_robot.urdf
friday_robot/: package.xml
friday_robot/config/: joint_names_friday_robot.yaml
friday_robot/launch/: gazebo.launch
friday_robot/meshes/: fl_abad_link.STL  fl_lower_leg_link.STL  fr_foot_link.STL  fr_upper_leg_linnk.STL  hl_abad_link.STL  hl_lower_leg_link.STL  hl_upper_leg_linnk.STL  hr_foot_link.STL  hr_lower_leg_link.STL
friday_robot/urdf/: friday_robot.csv  friday_robot.urdf
install/: local_setup.sh  setup.sh
log/: latest_build
(+408 files in other folders)
